@@ -1,3 +1,12 @@
+2006-01-22  Peter Harvey  <peter.a.harvey@gmail.com>
+
+	* src/bookmarks/ephy-bookmark-action.c
+	* src/bookmarks/ephy-bookmark-properties.c
+	
+	Remove the user-icon functionality for now. Too many bugs.
+	Note that support for the user-icon field still exists in
+	the bookmarks database itself.
+
 2006-01-21  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/window-commands.c: (window_cmd_help_about):
